delete 4 files and update 10 files

--- a/astro-website-theme/index.html
+++ b/astro-website-theme/index.html
@@ -87,7 +87,7 @@
           </ul>
           <ul class="tabs-content">
             <li class="tab">
-              <code>$ npm create astro@latest</code>
+              <code>$ npm create astro@latestfffffffffffff</code>
             </li>
             <li class="tab">
               <code>$ pnpm create astro@latest</code>
